Yellow_belt_approx/.metadata/.plugins/org.eclipse.cdt.ui/max_by_pred.build.log
22:12:19 **** Incremental Build of configuration Debug for project max_by_pred ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\main.o" "..\\src\\main.cpp" 
..\src\main.cpp: In function 'void TestUniqueMax()':
..\src\main.cpp:38:3: error: 'Assert' was not declared in this scope
   Assert(max_element_if(numbers.begin(), numbers.end(), IsEven) ==
   ^~~~~~
..\src\main.cpp:38:3: note: suggested alternative: 'qsort'
   Assert(max_element_if(numbers.begin(), numbers.end(), IsEven) ==
   ^~~~~~
   qsort
..\src\main.cpp: In function 'void TestSeveralMax()':
..\src\main.cpp:56:3: error: 'ASSERT' was not declared in this scope
   ASSERT(max_element_if(text.begin(), text.end(), IsCapitalized()) ==
   ^~~~~~
..\src\main.cpp: In function 'void TestNoMax()':
..\src\main.cpp:67:3: error: 'ASSERT' was not declared in this scope
   ASSERT(max_element_if(empty.begin(), empty.end(), AlwaysTrue) ==
   ^~~~~~
..\src\main.cpp: In function 'int main()':
..\src\main.cpp:78:3: error: 'TestRunner' was not declared in this scope
   TestRunner tr;
   ^~~~~~~~~~
..\src\main.cpp:79:3: error: 'tr' was not declared in this scope
   tr.RunTest(TestUniqueMax, "TestUniqueMax");
   ^~
..\src\main.cpp:79:3: note: suggested alternative: 'tm'
   tr.RunTest(TestUniqueMax, "TestUniqueMax");
   ^~
   tm
..\src\main.cpp: In instantiation of 'ForwardIterator max_element_if(ForwardIterator, ForwardIterator, UnaryPredicate) [with ForwardIterator = __gnu_cxx::__normal_iterator<int*, std::vector<int> >; UnaryPredicate = TestUniqueMax()::<lambda(int)>]':
..\src\main.cpp:38:63:   required from here
..\src\main.cpp:17:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
..\src\main.cpp: In instantiation of 'ForwardIterator max_element_if(ForwardIterator, ForwardIterator, UnaryPredicate) [with ForwardIterator = std::_List_const_iterator<int>; UnaryPredicate = TestUniqueMax()::<lambda(int)>]':
..\src\main.cpp:40:57:   required from here
..\src\main.cpp:17:1: warning: no return statement in function returning non-void [-Wreturn-type]
..\src\main.cpp: In instantiation of 'ForwardIterator max_element_if(ForwardIterator, ForwardIterator, UnaryPredicate) [with ForwardIterator = std::_Fwd_list_const_iterator<std::__cxx11::basic_string<char> >; UnaryPredicate = TestSeveralMax()::IsCapitalized]':
..\src\main.cpp:56:66:   required from here
..\src\main.cpp:17:1: warning: no return statement in function returning non-void [-Wreturn-type]
..\src\main.cpp: In instantiation of 'ForwardIterator max_element_if(ForwardIterator, ForwardIterator, UnaryPredicate) [with ForwardIterator = __gnu_cxx::__normal_iterator<const int*, std::vector<int> >; UnaryPredicate = TestNoMax()::<lambda(int)>]':
..\src\main.cpp:67:63:   required from here
..\src\main.cpp:17:1: warning: no return statement in function returning non-void [-Wreturn-type]
..\src\main.cpp: In instantiation of 'ForwardIterator max_element_if(ForwardIterator, ForwardIterator, UnaryPredicate) [with ForwardIterator = __gnu_cxx::__normal_iterator<const char*, std::__cxx11::basic_string<char> >; UnaryPredicate = TestNoMax()::<lambda(char)>]':
..\src\main.cpp:73:60:   required from here
..\src\main.cpp:17:1: warning: no return statement in function returning non-void [-Wreturn-type]

22:12:20 Build Finished (took 986ms)

